--- a/indexcards/src/main/resources/application.properties
+++ b/indexcards/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+spring.main.allow-bean-definition-overriding=true
