--- a/indexcards/src/main/resources/application.properties
+++ b/indexcards/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
+
+# App Properties
+bezkoder.app.jwtSecret=bezKoderSecretKey
+bezkoder.app.jwtExpirationMs=86400000
