--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "angular2-notifications": "^12.0.0",
     "crypto-js": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
