--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -25,7 +25,7 @@
     "crypto-js": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.0",
