--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "indexcards-ui",
-  "version": "0.0.0",
+  "version": "0.0.1-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "angular2-notifications": "^12.0.0",
     "crypto-js": "^4.1.1",
+    "primeng": "^16.0.0-rc.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.4"
