--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -20,9 +20,8 @@
     "@angular/router": "^15.2.1",
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "angular2-notifications": "^12.0.0",
     "crypto-js": "^4.1.1",
+    "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
