--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   sonarqube:
-    name: Build
+    name: Sonarqube analysis
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -44,5 +44,5 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
-      - name: Build with Maven
+      - name: Build and Test with Maven
         run: mvn -B package --file indexcards/pom.xml
