--- a/indexcards-ui/Dockerfile
+++ b/indexcards-ui/Dockerfile
@@ -8,6 +8,6 @@ WORKDIR /app
 COPY . .
 
 RUN npm install
-RUN npm run build --prod --host 0.0.0.0 --port 4200
+RUN npm run build --prod --host 0.0.0.0
 
 CMD ["npm", "start"]
