--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 services:
   mysqldb:
     container_name: dbcontainer
@@ -11,6 +11,7 @@ services:
       - springmysql-net
     ports:
       - '3307:3306'
+    restart: always
     volumes:
       - my-db:/var/lib/mysql
   backend:
@@ -21,9 +22,11 @@ services:
     volumes:
       - './indexcards:/usr/src/app'
     ports:
-      - '8080:8080'
+      - '8081:8080'
     networks:
       - springmysql-net
+      - backend
+    restart: always
     depends_on:
       - mysqldb
   frontend:
@@ -31,11 +34,13 @@ services:
     build: ./indexcards-ui
     volumes:
       - './indexcards-ui:/usr/src/app'
+    restart: always
     ports:
       - '4200:4200'
 
 networks:
   springmysql-net:
+  backend:
 
 volumes:
   my-db:
