--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,8 +18,8 @@ jobs:
         # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_DOMAIN: indexcards.documentation.7ubi.de
-          CONFIG_FILE: folder/mkdocs.yml
+          #CUSTOM_DOMAIN: indexcards.documentation.7ubi.de
+          CONFIG_FILE: indexcards-doku/mkdocs.yml
           EXTRA_PACKAGES: build-base
           # GITHUB_DOMAIN: github.myenterprise.com
-          REQUIREMENTS: folder/requirements.txt
+          REQUIREMENTS: indexcards-doku/requirements.txt
