--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,4 +23,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force --config-file /indexcards-doku/mkdocs.yml
+      - run: mkdocs gh-deploy --config-file /indexcards-doku/mkdocs.yml  --force
