--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3'
+
 services:
   mysqldb:
     container_name: dbcontainer
@@ -26,6 +27,8 @@ services:
     networks:
       - springmysql-net
       - backend
+      - nginx_frontend
+      - nginx_backend
     restart: always
     depends_on:
       - mysqldb
@@ -35,12 +38,21 @@ services:
     volumes:
       - './indexcards-ui:/usr/src/app'
     restart: always
+    networks:
+      - backend
+      - nginx_frontend
+      - nginx_backend
     ports:
       - '4200:4200'
 
 networks:
   springmysql-net:
   backend:
+  nginx_frontend:
+    external: true
+  nginx_backend:
+    external: true
+
 
 volumes:
   my-db:
