--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,23 +15,24 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # sonarqube:
-  #   name: Sonarqube analysis
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-  #     - uses: sonarsource/sonarqube-scan-action@master
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  sonarqube:
+     name: Sonarqube analysis
+     runs-on: ubuntu-latest
+     steps:
+       - uses: actions/checkout@v2
+         with:
+           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+       - uses: sonarsource/sonarqube-scan-action@master
+         env:
+           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+       - uses: sonarsource/sonarqube-quality-gate-action@master
+         timeout-minutes: 5
+         env:
+           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   build:
 
     runs-on: ubuntu-latest
