--- a/indexcards-ui/Dockerfile
+++ b/indexcards-ui/Dockerfile
@@ -1,13 +1,8 @@
-# Get node
-FROM node:latest
-
-# Make working directory
-RUN mkdir -p /app
+FROM node:alpine AS builder
 WORKDIR /app
-
 COPY . .
-
-RUN npm install
-RUN npm run build --prod
-
-CMD ["npm", "start"]
+RUN npm install && \
+    npm run build
+FROM nginx:alpine
+COPY --from=builder /app/dist/* /usr/share/nginx/html/
+COPY /nginx.conf /etc/nginx/conf.d/default.conf
