--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,9 +15,25 @@ on:
     branches: [ "main" ]
 
 jobs:
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build and Test with Maven
+        run: mvn -B package --file indexcards/pom.xml
   sonarqube:
      name: Sonarqube analysis
      runs-on: ubuntu-latest
+     needs:
+       - test
      steps:
        - uses: actions/checkout@v2
          with:
@@ -32,18 +48,17 @@ jobs:
          timeout-minutes: 5
          env:
            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
-
+    needs:
+      - sonarqube
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v0.1.10
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build and Test with Maven
-        run: mvn -B package --file indexcards/pom.xml
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SECRET_KEY }}
+          port: ${{ secrets.PORT }}
+          script: bash deploy_indexcard_docu.sh
+        if: github.event_name != 'pull_request'
