--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs:
-      - sonarqube
+      - test
     steps:
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v0.1.10
