--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,10 +42,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        run: cd indexcard-ui && npm ci
+        run: cd indexcards-ui && npm ci
 
       - name: Code Linting
-        run: cd indexcard-ui && npm run lint
+        run: cd indexcards-ui && npm run lint
   #sonarqube:
   #   name: Sonarqube analysis
   #   runs-on: ubuntu-latest
