--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,10 +15,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
-
+  build:
+    name: Build and Test
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
@@ -46,36 +45,26 @@ jobs:
 
       - name: Code Linting
         run: cd indexcards-ui && npm run lint
-  #sonarqube:
-  #   name: Sonarqube analysis
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - test
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-  #     - uses: sonarsource/sonarqube-scan-action@master
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      #  - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   deploy:
-    runs-on: ubuntu-latest
+    name: Deployment
+    runs-on: self-hosted
     needs:
-      - test
+      - build
     steps:
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SECRET_KEY }}
-          port: ${{ secrets.PORT }}
-          script: bash deploy_indexcard.sh
-        if: github.event_name != 'pull_request'
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Start docker-compose
+        run: |
+          docker-compose down
+          docker-compose up --build -d
+  documentation:
+    name: Deploy documentation
+    runs-on: self-hosted
+    needs:
+      - deploy
+    steps:
+      - name: Start docker-compose
+        run: |
+          cd indexcards-docu
+          docker-compose down
+          docker-compose up --build -d
