--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,10 @@ services:
     container_name: backendcontainer
     build: ./indexcards
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/indexcardsdb?autoReconnect=true&useSSL=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/indexcardsdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+      SPRING_DATASOURCE_USERNAME: 'root'
       SPRING_DATASOURCE_PASSWORD: '1234'
+      SPRING_JPA_DATABASE-PLATFORM: 'org.hibernate.dialect.MySQL5InnoDBDialect'
     volumes:
       - './indexcards:/usr/src/app'
     ports:
