--- a/indexcards-ui/angular.json
+++ b/indexcards-ui/angular.json
@@ -30,7 +30,9 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/chart.js/dist/chart.js"
+            ],
             "allowedCommonJsDependencies": [
               "lodash"
             ]
