--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.1",
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
