--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,10 +54,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         if: github.event_name != 'pull_request'
+      - name: Create .env
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       - name: Start docker-compose
         run: |
           docker-compose down
-          docker-compose up --build -d
+          docker-compose up --env-file ./.env --build -d
         if: github.event_name != 'pull_request'
   documentation:
     name: Deploy documentation
