--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       MYSQL_DATABASE: 'indexcardsdb'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: '1234'
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
     networks:
       - springmysql-net
     ports:
@@ -21,7 +21,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/indexcardsdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
       SPRING_DATASOURCE_USERNAME: 'root'
-      SPRING_DATASOURCE_PASSWORD: '1234'
+      SPRING_DATASOURCE_PASSWORD: '${DB_PASSWORD}'
       SPRING_JPA_DATABASE-PLATFORM: 'org.hibernate.dialect.MySQL5InnoDBDialect'
     volumes:
       - './indexcards:/usr/src/app'
