--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,11 +54,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         if: github.event_name != 'pull_request'
-      - name: Start docker-compose
+      - name: Make .env
         uses: SpicyPizza/create-envfile@v2.0
         with:
           envkey_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           file_name: .env
+          fail_on_empty: false
+          sort_keys: false
+        if: github.event_name != 'pull_request'
+      - name: Start docker-compose
         run: |
           docker-compose down
           docker-compose up --build -d
