--- a/indexcards-ui/angular.json
+++ b/indexcards-ui/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "primeng/resources/themes/md-light-deeppurple/theme.css",
+              "src/app/styles/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
             ],
