--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "^4.1.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.4"
