--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "indexcards-ui",
-  "version": "0.1.5-SNAPSHOT",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4200",
