--- a/indexcards-ui/package.json
+++ b/indexcards-ui/package.json
@@ -28,8 +28,8 @@
     "crypto-js": "^4.1.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
-    "quill": "^1.3.7",
-    "rxjs": "~7.5.0",
+    "quill": "^2.0.2",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.4"
   },
@@ -40,7 +40,7 @@
     "@angular-eslint/eslint-plugin-template": "15.2.1",
     "@angular-eslint/schematics": "15.2.1",
     "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.0.0",
+    "@angular/cli": "^15.2.11",
     "@angular/compiler-cli": "^15.2.1",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
